Version 2009041401
+ Added tests for POD and Kwalitee

Version 2009041401
+ Fixed MANIFEST.

Version 2009041001
+ Add OO interface.

Version 2009040901
+ Modernized Makefile.PL.
+ POD fixes.
+ Added Changes file.
+ Removed $VERSION from test files.

Version 2009033101
+ Initial release