@@ -1,3 +1,7 @@
+Version 2009120301
++ Fixed a bug that autovivified the correct number of named params.
++ Set build_requires & configure_requires.
+
 Version 2009041401
 + Added tests for POD and Kwalitee
 
